# C-Opengl-Git-Lessons

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Entity/: Entity.cpp  Entity.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Reader/: Reader.cpp  Reader.h
src/Render/: Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
src/Shader/: Shader.cpp  Shader.h
src/ShaderFiles/: FragmentShader.frag  FragmentShader.txt  VertexShader.vert
src/TextureManager/: Texture.cpp  Texture.h
src/Window/: Window.cpp  Window.h
src/World/: World.cpp  World.h
